--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -40,7 +40,7 @@
   {% endif %}
   {% if site.telegram_username %}
   <li>
-    <a target="_blank" href="https://https://t.me/people/{{ site.telegram_username }}">
+    <a target="_blank" href="https://t.me/people/{{ site.telegram_username }}">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa  fa-stack-1x fa-inverse"></i>
